--- a/base/pom.xml
+++ b/base/pom.xml
@@ -102,6 +102,14 @@
 			<version>3.10.6.Final</version>
 		</dependency>
 		<!-- #jboss netty -->
+		
+		<!-- jedis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<!-- #jedis -->
 
 	</dependencies>
 
