--- a/base/pom.xml
+++ b/base/pom.xml
@@ -111,6 +111,12 @@
 		</dependency>
 		<!-- #jedis -->
 
+		<dependency>
+		    <groupId>com.baidu.aip</groupId>
+		    <artifactId>java-sdk</artifactId>
+		    <version>4.1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
